--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hydrapp</title>
-    <meta name="description" content="Your project description" />
+    <meta
+      name="description"
+      content="Apka licząca ilość wypitych szklanek wody."
+    />
     <!-- Title -->
-    <meta property="og:title" content />
+    <meta property="og:title" content="Hydrapp" />
     <!-- OPTIONAL description. 2-4 sentences. -->
-    <meta property="og:description" content />
+    <meta
+      property="og:description"
+      content="Apka licząca ilość wypitych szklanek wody."
+    />
     <!-- full url with http(s) ie. https://maciejkorsan.github.io/my-repo/ -->
-    <meta property="og:url" content />
+    <meta
+      property="og:url"
+      content="https://mateusz-meler.github.io/hydrapp/"
+    />
     <!-- full url to the image with http(s) ie. https://maciejkorsan.github.io/my-repo/assets/img/fb.png. Facebook suggests at least 1200 x 630. -->
     <meta
       property="og:image"
-      content="https://maciejkorsan.com/wtf-gulp-starter/assets/img/cover.png"
+      content="https://mateusz-meler.github.io/hydrapp/og.png"
     />
 
     <!-- uncomment the line below to enable PWA  -->
