--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,7 +2,10 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, user-scalable=0, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=0, initial-scale=1.0"
+    />
     <title>Hydrapp</title>
     <meta
       name="description"
@@ -154,6 +157,7 @@
     />
   </head>
   <body>
+      <a class="info" href="info.html">ℹ️</a>
     <h1 class="heading">hydrapp</h1>
     <div class="glass">
       <p class="glass__number glass__number--js">0</p>
