--- a/src/pages/info.html
+++ b/src/pages/info.html
@@ -32,12 +32,40 @@
     <!-- uncomment the line below to enable PWA  -->
     <!-- <link rel="manifest" href="manifest.json" /> -->
   </head>
-  <body></body>
-      <a class="back" href="index.html">🔙</a>
-      <h1 class="heading">historia :</h1>
-      <section>
-<h2 class="date date--js"></h2>
-<p class="value value--js"></p>
-</section>
+  <body>
+    <a class="back" href="index.html">🔙</a>
+    <h1 class="heading">historia :</h1>
+    <section>
+      <article class="decoration">
+        <h2 class="date date--js"></h2>
+        <p class="value value--js"></p>
+      </article>
+      <h2 class="date2 date2--js"></h2>
+      <p class="value2 value2--js"></p>
+
+      <h2 class="date date3--js"></h2>
+      <p class="value value3--js"></p>
+
+      <h2 class="date date4--js"></h2>
+      <p class="value value4--js"></p>
+
+      <h2 class="date date5--js"></h2>
+      <p class="value value5--js"></p>
+
+      <h2 class="date date6--js"></h2>
+      <p class="value value6--js"></p>
+
+      <h2 class="date date7--js"></h2>
+      <p class="value value7--js"></p>
+
+      <h2 class="date date8--js"></h2>
+      <p class="value value8--js"></p>
+
+      <h2 class="date date9--js"></h2>
+      <p class="value value9--js"></p>
+
+      <h2 class="date date10--js"></h2>
+      <p class="value value10--js"></p>
+    </section>
   </body>
 </html>
