--- a/src/pages/info.html
+++ b/src/pages/info.html
@@ -30,7 +30,7 @@
     />
 
     <!-- uncomment the line below to enable PWA  -->
-    <!-- <link rel="manifest" href="manifest.json" /> -->
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <a class="back" href="index.html">🔙</a>
