--- a/src/pages/info.html
+++ b/src/pages/info.html
@@ -160,12 +160,11 @@
     <a class="back" href="index.html">🔙</a>
     <h1 class="heading">historia :</h1>
     <section>
-      <article class="decoration">
-        <h2 class="date date--js"></h2>
-        <p class="value value--js"></p>
-      </article>
-      <h2 class="date2 date2--js"></h2>
-      <p class="value2 value2--js"></p>
+      <h2 class="date date--js"></h2>
+      <p class="value value--js"></p>
+
+      <h2 class="date date2--js"></h2>
+      <p class="value value2--js"></p>
 
       <h2 class="date date3--js"></h2>
       <p class="value value3--js"></p>
