clear history button

--- a/src/pages/info.html
+++ b/src/pages/info.html
@@ -157,7 +157,11 @@
     />
   </head>
   <body>
-    <a class="back" href="index.html">🔙</a>
+    <div class="box">
+    <a class="box__back" href="index.html">🔙</a> 
+    <button class="box__clear box__clear--js">🗑</button>
+  </div>
+
     <h1 class="heading">historia :</h1>
     <section>
       <h2 class="date date--js"></h2>
